--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -88,8 +88,8 @@ nav ul {
 }
 
 .section-title {
-
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -113,10 +113,48 @@ nav ul {
     color: #757575;
 }
 
-.info-description{
+.info-description {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
 
-    
+
+}
+
+/* what i do styles*/
+.section {
+    margin-top: 130px;
+}
+
+.skils-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    line-height: 27px;
+    margin-top: 30px;
+}
+
+.skill-description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+
+}
+
+/* Resume styles */
+.resume{
+    margin-top: 130px;
 }
