--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,7 +25,7 @@
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title {
@@ -46,7 +46,6 @@ nav ul {
 .text-primary {
     color: #FD6E0A
 }
-
 
 /* banner styles */
 .banner {
@@ -69,7 +68,6 @@ nav ul {
     color: #757575;
     font-size: 18px;
     margin-bottom: 30px;
-
 }
 
 /* main section */
@@ -81,15 +79,18 @@ nav ul {
 /* about section styles */
 .about {
     text-align: center;
-    margin-top: 130px;
+    margin-top: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
     background: #FFF8F3;
     border-radius: 10px;
-    padding: 131px 157px;
+    padding: 120px 157px;
 }
 
 .section-title {
     text-align: center;
     margin-bottom: 50px;
+    margin-top: 130px;
     font-weight: 700;
     font-size: 35px;
 }
@@ -118,12 +119,26 @@ nav ul {
     font-size: 20px;
     color: #474747;
 
-
 }
 
 /* what i do styles*/
 .section {
     margin-top: 130px;
+}
+
+
+.what-i-do {
+    padding: 100px;
+
+}
+
+.what-i-do .what-i-do-description {
+    padding-bottom: 100px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+    color: #757575;
 }
 
 .skils-container {
@@ -155,6 +170,83 @@ nav ul {
 }
 
 /* Resume styles */
+
+
 .resume{
-    margin-top: 130px;
+    padding-left: 230px;
+    padding-right: 230px;
+}
+
+.resume-content {
+    display: flex;
+    gap: 24px;
+    
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+.resume .title {
+    font-weight: 7000;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+
+}
+
+.resume .sub-title {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+}
+
+.resume .description {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+
+}
+
+
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* Contact Style */
+
+.contact {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 150px;
+}
+
+
+.contact .section-title {
+    text-align: left;
+
+
+}
+
+.contact input[type="text"],
+input[type="email"],
+textarea {
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+.contact .all-contact {
+    align-content: left;
 }
